grammar.js
    document: $ => seq(
      optional($.preamble),
      repeat($.section),
    ),

    shader_regex_pattern_header: $ => seq(
      '[',
      seq(
        alias($._regex_header_prefix, $.header_prefix),
        alias($._regex_pattern_header, $.header_identifier),
      ),
      optional(']'),
    ),

    shader_regex_pattern_body: $ => repeat1(
      alias($._external_line, $.regex_pattern),
    ),

    shader_regex_pattern_section: $ => seq(
      field('header', $.shader_regex_pattern_header),
      $._newline,
      optional(field('body', $.shader_regex_pattern_body)),
    ),

    shader_regex_replace_header: $ => seq(
      '[',
      seq(
        alias($._regex_header_prefix, $.header_prefix),
        alias($._regex_replace_header, $.header_identifier),
      ),
      optional(']'),
    ),

    shader_regex_replace_body: $ => repeat1(seq(
      // searches the same as $._section_header_start
      // but returns true if it does NOT find a section header
      $._section_header_guard,
      alias(
        repeat1(
          choice(
            $.regex_replacement,
            $.regex_replacement_conditional,
            $.character_escape,
            $.free_text,
          ),
        ),
        $.regex_replace_line,
      ),
      $._newline,
      optional($._section_header_start),
    )),

    shader_regex_replace_section: $ => seq(
      field('header', $.shader_regex_replace_header),
      $._newline,
      optional(field('body', $.shader_regex_replace_body)),
    ),

    shader_regex_declarations_header: $ => seq(
      '[',
      seq(
        alias($._regex_header_prefix, $.header_prefix),
        alias($._regex_declarations_header, $.header_identifier),
      ),
      optional(']'),
    ),

    shader_regex_declarations_body: $ => repeat1(
      alias($._external_line, $.dxbc_declaration),
    ),

    shader_regex_declarations_section: $ => seq(
      field('header', $.shader_regex_declarations_header),
      $._newline,
      optional(field('body', $.shader_regex_declarations_body)),
    ),

    shader_regex_commandlist_header: $ => seq(
      '[',
      seq(
        alias($._regex_header_prefix, $.header_prefix),
        alias($._regex_commandlist_header, $.header_identifier),
      ),
      optional(']'),
    ),

    shader_regex_commandlist_body: $ => repeat1(choice(
      $.shader_regex_setting_statement,
      $.primary_statement,
    )),

    shader_regex_commandlist_section: $ => seq(
      field('header', $.shader_regex_commandlist_header),
      $._newline,
      optional(field('body', $.shader_regex_commandlist_body)),
    ),

    shader_regex_setting_statement: $ => seq(
      choice(
        seq(
          field('key', alias(/(shader_model|temps)/i, $.shader_regex_key)),
          '=',
          field('value', repeat1($.free_text)),
        ),
        seq(
          field('key', alias(/filter_index/i, $.shader_regex_key)),
          '=',
          field('value', $.numeric_constant),
        ),
      ),
      $._newline,
    ),

    setting_section_header: $ => seq(
      '[',
      choice(
        alias(
          /(Logging|System|Device|Stereo|Rendering|Hunting|Profile|ConvergenceMap|Loader|Input)/i,
          $.header_identifier,
        ),
        choice(
          seq(
            alias(choice($._customresource_header_prefix, $._resourcepool_header_prefix), $.header_prefix),
            alias($._suffixed_resource_header, $.header_identifier),
          ),
          seq(
            alias($._include_header_prefix, $.header_prefix),
            alias($._suffixed_include_header, $.header_identifier),
          ),
        ),
      ),
      optional(']'),
      $._newline,
    ),

    setting_section_body: $ => repeat1($.setting_statement),

    setting_section: $ => seq(
      field('header', $.setting_section_header),
      optional(field('body', $.setting_section_body)),
    ),

    setting_statement: $ => choice(
      // general setting keys that don't need special handling
      seq(
        field('key', choice($._setting_statement_key, $._bracketed_setting_statement_key)),
        '=',
        field('value', $.setting_statement_value),
        $._newline,
      ),
      // the hash key needs to take free_text, which would normally conflict with fixed_value here
      seq(
        field('key', alias(/hash/i, $.setting_statement_key)),
        '=',
        field('value', alias($._hash_value, $.setting_statement_value)),
        $._newline,
      ),
      // the shader name keys used in custom shader sections which can be a path or null
      seq(
        field('key', alias(/[vhdgpc]s/i, $.setting_statement_key)),
        '=',
        field('value', alias($._specific_custom_shader_value, $.setting_statement_value)),
        $._newline,
      ),
      // any keys that take KeyBindings, which can also be a single free_text node or single exception_character node
      seq(
        field('key', alias(setting_section_key_binding_keys, $.setting_statement_key)),
        '=',
        field('value', alias($._specific_key_binding_value, $.setting_statement_value)),
        $._newline,
      ),
      // remaining keys that can take paths/files so a value that would have a conflict btwn fixed_value and free_text is always treated as a path
      seq(
        field('key', $._directory_setting_statement_key),
        '=',
        field('value', alias($._specific_directory_value, $.setting_statement_value)),
        $._newline,
      ),
      // the analyse_options key has a value that conflicts with the value of the marking_actions key
      // so unfortunately, because there is no backtracking and `mono_snapshot` is longer than `mono`
      // we need to do special handling for this key
      seq(
        field('key', alias(/analyse_options/i, $.setting_statement_key)),
        '=',
        field('value', alias($._frame_analysis_option_list, $.setting_statement_value)),
        $._newline,
      ),
    ),

    // $._hash_vale and $._frame_analysis_option_list
    // These exist only to keep the two special cases in line with how $.setting_statement_value is parsed for non-special situations
    // Basically, I need (setting_statement_value (_)) and not just (setting_statement_value)
    _hash_value: $ => $.free_text,

    _frame_analysis_option_list: $ => $.frame_analysis_option_list,

    _specific_custom_shader_value: $ => choice($.null, $._path_value),

    _specific_key_binding_value: $ => choice($.free_text, $.exception_character, $.key_binding_modifier, $.key_binding_expression),

    _specific_directory_value: $ => choice(alias($.free_text, $.path_key_value), $._path_value),

    _directory_setting_statement_key: $ =>
      // path/file only keys:
      alias(token(prec(-1, setting_section_directory_value_keys)), $.setting_statement_key),

    _bracketed_setting_statement_key: $ => alias(custom_shader_keys_with_brackets, $.setting_statement_key),

    _setting_statement_key: $ => alias($.fixed_value, $.setting_statement_key),

    setting_statement_value: $ => choice(
      $.resource_format,
      alias(resource_type_values, $.resource_type),
      $.boolean_value,
      $.string,
      $._path_value,
      $.static_operational_expression,
      $.fuzzy_match_expression,
      $._list_expression,
      field('fixed_value', alias($.fixed_value, $.fixed_setting_key_value)),
    ),

    commandlist_section_header: $ => seq(
      '[',
      choice(
        alias(/(Present|Clear(?:RenderTarget|DepthStencil)View|ClearUnorderedAccessView(?:Uint|Float))/i, $.header_identifier),
        seq(
          alias($._commandlist_header_prefix, $.header_prefix),
          alias($._suffixed_commandlist_header, $.header_identifier),
        ),
      ),
      optional(']'),
      $._newline,
    ),

    commandlist_section: $ => seq(
      field('header', $.commandlist_section_header),
      optional(field('body', alias($._block, $.commandlist_section_body))),
    ),

    assignment_statement: $ => seq(
      optional($.execution_modifier),
      choice(
        seq(
          field('name', choice(
            $.ini_parameter,
            $._scalar_variable,
          )),
          '=',
          field('expression', $._operational_expression),
          $._newline,
        ),
        seq(
          field('name', $._limited_resource_operand),
          '=',
          field('expression', $.resource_usage_expression),
          $._newline,
        ),
        seq(
          prec.left(PREC.SUFFIX, seq(
            $._limited_resource_operand,
            field('operator', '->'),
            alias($.fixed_value, $.resource_property),
            field('arguments', $.arguments),
          )),
          '=',
          field('value', choice($.resource_format, $.integer)),
          $._newline,
        ),
        seq(
          field('name', $.callable_commandlist),
          '=',
          field('source', choice(
            $.null,
            seq(optional(alias(/ref(?:erence)?/i, $.proxy_modifier)), $.callable_commandlist),
          )),
        ),
      ),
    ),

    // adapted from tree-sitter-lua
    _block: ($) => repeat1(choice(
      $.setting_statement,
      $.primary_statement,
    )),

    // adapted from tree-sitter-lua
    conditional_statement: $ => seq(
      $.if_statement,
      repeat(field('alternative', $.elseif_statement)),
      optional(field('alternative', $.else_statement)),
      alias($._endif, 'endif'),
      $._newline,
    ),

    if_statement: $ => seq(
      alias($._if, 'if'),
      $._significant_ws,
      field('condition', $._operational_expression),
      $._newline,
      field('consequence', alias(optional($._block), $.block)),
    ),

    // adapted from tree-sitter-lua
    elseif_statement: $ => seq(
      choice(alias($._elif, 'elif'), alias($._elseif, 'else if')),
      $._significant_ws,
      field('condition', $._operational_expression),
      $._newline,
      field('consequence', alias(optional($._block), $.block)),
    ),

    // adapted from tree-sitter-lua
    run_instruction: $ => seq(
      optional($.execution_modifier),
      alias(/run/i, $.instruction),
      '=',
      $._callable_section,
      $._newline,
    ),

    check_texture_override_instruction: $ => seq(
      optional($.execution_modifier),
      alias(/checktextureoverride/i, $.instruction),
      '=',
      $._resource_operand,
      $._newline,
    ),

    handling_instruction: $ => seq(
      optional($.execution_modifier),
      alias(/handling/i, $.instruction),
      '=',
      field('fixed_value', alias($.fixed_value, $.handling_key_value)),
      $._newline,
    ),

    drawindexed_instruction: $ => seq(
      optional($.execution_modifier),
      alias(/drawindexed(?:instanced)?/i, $.instruction),
      '=',
      choice(
        field('fixed_value', alias($.fixed_value, $.draw_instruction_key_value)),
        list_seq($._operational_expression, ','),
      ),
      $._newline,
    ),

    _list_expression: $ => choice(
      $.list_expression,
      $._fixed_value_list,
    ),

    // written to guarantee 2 or more desired nodes
    resource_usage_expression: $ => seq(
      repeat($.resource_modifier),
      $._resource_operand,
      repeat($.resource_modifier),
    ),

    resource_modifier: _ =>
      /(copy(?:_desc(?:ription)?)?|ref(?:erence)?|raw|stereo|mono|stereo2mono|set_viewport|no_view_cache|resolve_msaa|unless_null)/i,

    _resource_operand: $ => choice(
      $._language_variable,
      $.resource_identifier,
      $.custom_resource,
      $.resource_pool,
    ),

    _limited_resource_operand: $ => choice(
      $._limited_language_variable,
      $.resource_identifier,
      $.custom_resource,
      $.resource_pool,
    ),

    _operational_expression: $ => choice(
      $.operational_expression,
      $._special_operational_expresssion,
    ),

    binary_expression: $ => _generate_binary_expr_rule($._operational_expression),

    // adapted from tree-sitter-lua
    _scalar_variable: $ => choice(
      $.named_variable,
      $.pooled_variable,
    ),

    resource_identifier: $ => choice(
      token(/(?:this|(?:ini|stereo)params|cursor_(?:mask|color))/i),
      $.null,
    ),

    custom_resource: $ => seq(
      alias($._customresource_header_prefix, $.resource_prefix),
      $._useable_resource_identifier,
    ),

    _useable_resource_identifier: $ => seq(
      optional($._namespace_resolution),
      alias($._custom_resource_identifier, $.section_identifier),
    ),

    named_variable: $ => seq(
      '$',
      $._antiwhitespace, // XXX: Consider getting rid of this and folding functionality into following external rule
      $._pooled_variable_guard,
      optional($._namespace_resolution),
      alias(/[a-z_]\w+|[a-z]/i, $.variable_identifier),
    ),

    _callable_section: $ => choice(
      $.callable_commandlist,
      $.callable_customshader,
    ),

    callable_commandlist: $ => seq(
      alias($._commandlist_callable_prefix, $.callable_prefix),
      $._useable_section_identifier,
    ),

    _useable_section_identifier: $ => seq(
      optional($._namespace_resolution),
      alias(token.immediate(custom_section_name), $.section_identifier),
    ),

    _namespace_resolution: $ => seq(
      alias($._namespace_resolution_start, '\\'),
      alias($._namespace_resolution_content, $.namespace),
      alias($._namespace_resolution_end, '\\'),
    ),

    numeric_constant: _ => choice(
      token(/[+-]?\d+(\.\d+(e[-+]\d+)?)?/i),
      token(/[+-]?\.\d+/i), // apparently 3dmigoto allows floats of the form -.56 and the like
    ),

    boolean_value: _ => /(?:true|false|yes|no|on|off)/i,

    _path_value: $ => choice(
      alias(path_regex, $.path_key_value),
      alias(file_regex, $.file_key_value),
    ),

    regex_replacement: $ => choice(
      seq('${', alias(/\w+/i, $.replacement_identifier), '}'), // ${identifier}
      seq('$<', alias(/\w+/i, $.replacement_identifier), '>'), // $<name>
      seq('$', token.immediate(/\d+|[&$`'_+]/)),
    ),

    character_escape: _ => /\\[a-z\(\)\[\]${}:]/i,

    free_text: _ => /[^\\\/;="${}\s]+/i,

    comment: $ => prec(1, seq(
      field('start', ';'),
      field('content', /[^\r\n]*/),
      $._newline,
    )),

    null: _ => /null/i,

    // XXX: inline these?
    _if: _ => /if/i,

    _elif: _ => /elif/i,

    _elseif: _ => /else if/i,

    _endif: _ => /endif/i,

    _significant_ws: _ => /[ \t]+/i,
  },
});
